syntax = "proto2";

package com.google.sps.proto;

import "Message.proto";

option java_outer_classname = "FetchMessagesProto";

message FetchMessagesRequest {
  required string roomId = 1;
}

message FetchMessagesResponse {
  required string roomId = 1;
  repeated com.google.sps.data.Message messages = 2;
}
